--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@editorjs/paragraph": "^2.11.7",
     "@editorjs/quote": "^2.7.6",
     "@flaticon/flaticon-uicons": "^2.2.0",
+    "@weekwood/editorjs-video": "^1.0.2",
     "axios": "^1.4.0",
+    "editorjs-video": "^1.1.0",
     "firebase": "^10.1.0",
     "framer-motion": "^10.13.0",
     "react": "^18.2.0",
