--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@editorjs/paragraph": "^2.11.7",
     "@editorjs/quote": "^2.7.6",
     "@flaticon/flaticon-uicons": "^2.2.0",
+    "@lottiefiles/dotlottie-react": "^0.14.1",
     "@weekwood/editorjs-video": "^1.0.2",
     "axios": "^1.4.0",
     "editorjs-video": "^1.1.0",
     "firebase": "^10.1.0",
     "framer-motion": "^10.13.0",
+    "lucide-react": "^0.514.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
