--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@editorjs/marker": "^1.4.0",
     "@editorjs/paragraph": "^2.11.7",
     "@editorjs/quote": "^2.7.6",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@flaticon/flaticon-uicons": "^2.2.0",
     "@lottiefiles/dotlottie-react": "^0.14.1",
     "@weekwood/editorjs-video": "^1.0.2",
@@ -32,7 +34,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
