--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@flaticon/flaticon-uicons": "^2.2.0",
     "@lottiefiles/dotlottie-react": "^0.14.1",
+    "@vercel/analytics": "^1.5.0",
     "@weekwood/editorjs-video": "^1.0.2",
     "axios": "^1.4.0",
     "dayjs": "^1.11.13",
